--- a/GymAngel.Frontend/wwwroot/signup.html
+++ b/GymAngel.Frontend/wwwroot/signup.html
@@ -16,6 +16,13 @@
             <h2>Create Account</h2>
             <p>Fill in your details to sign up</p>
         </div>
+        <div class="form-group">
+            <label for="username" class="form-label">Username</label>
+            <div class="input-wrapper">
+                <input type="text" id="username" name="username" required autocomplete="username">
+            </div>
+            <span class="error-message" id="usernameError"></span>
+        </div>
 
         <form class="login-form" id="signupForm" novalidate>
             <div class="form-group">
