--- a/GymAngel.Frontend/wwwroot/signin.html
+++ b/GymAngel.Frontend/wwwroot/signin.html
@@ -86,6 +86,9 @@
 </div>
 
 
+<script src="/js/env.js"></script>
+<script> console.log('ENV loaded:', window.__ENV__); </script>
+<script src="/js/auth.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
