--- a/GymAngel.Frontend/wwwroot/signup.html
+++ b/GymAngel.Frontend/wwwroot/signup.html
@@ -95,7 +95,9 @@
         </div>
     </div>
 </div>
-
+<script src="/js/env.js"></script>
+<script> console.log('ENV loaded:', window.__ENV__); </script>
+<script src="/js/auth.js"></script>
 <script src="js/script-signup.js"></script>
 </body>
 </html>
